exports[`test A standard order 1`] = `
<li
  className="fhXzbr">
  <span
    className="hOmeub">
    <span>
      January 1, 2012
    </span>
  </span>
  <span
    className="fKqvxj">
    MOOIE 456 TEST
  </span>
  <span
    className="cSfLDO">
    <span
      className="gLZwgs">
      <span
        className="gLZwgs">
        1
        x 
        Name of the product
      </span>
      <span
        className="gLZwgs">
        2
        x 
        Another product
      </span>
    </span>
  </span>
  <span
    className="dZzYIF">
    <span>
      $100.00
    </span>
  </span>
  <span
    className="fTtnzj">
    <span>
      completed
    </span>
  </span>
  <span
    className="cSaEzH">
    <a
      aria-label="Download invoice"
      className="gjWJrZ"
      href="http://somelink"
      iconSource="download.svg"
      to="http://somelink">
      <span
        className="screen-reader-text">
        Invoice
      </span>
    </a>
  </span>
</li>
`;

exports[`test An Order with a disabled invoice button 1`] = `
<li
  className="fhXzbr">
  <span
    className="hOmeub">
    <span>
      January 1, 2012
    </span>
  </span>
  <span
    className="fKqvxj">
    MOOIE 456 TEST
  </span>
  <span
    className="cSfLDO">
    <span
      className="gLZwgs">
      <span
        className="gLZwgs">
        1
        x 
        Name of the product
      </span>
      <span
        className="gLZwgs">
        2
        x 
        Another product
      </span>
    </span>
  </span>
  <span
    className="dZzYIF">
    <span>
      $100.00
    </span>
  </span>
  <span
    className="fTtnzj">
    <span>
      pending
    </span>
  </span>
  <span
    className="cSaEzH">
    <button
      aria-label="Download invoice"
      className="hlkIIS fiWVzZ"
      disabled="disabled"
      to="http://somelink">
      <span
        className="screen-reader-text">
        Invoice
      </span>
    </button>
  </span>
</li>
`;
